assets/css/style.scss
---
---

@import "{{ site.theme }}";

$base-color: #d5000d;
$base-color-dark: darken($base-color, 10%);

h3 {
  color: $base-color;
}

a {
  color: $base-color;
}
a:hover {
  color: $base-color-dark;
}

blockquote {
  font-size: 1.4em;
  border-left: 10px solid #d9d9d9;
}

ul li {
  list-style-position: inside;
  list-style-type: disc;
}

.logo{
  float: left;
  height: 96.8px;
  max-width: 100px;
  padding-right: 0.9em;
  filter:
    drop-shadow(1px 0px 0 #444)
    drop-shadow(-1px 0px 0 #444)
    drop-shadow(0px 1px 0 #444)
    drop-shadow(0px -1px 0 #444)
    drop-shadow(1px 1px 0 #444)
    drop-shadow(-1px 1px 0 #444)
    drop-shadow(1px -1px 0 #444)
    drop-shadow(-1px -1px 0 #444)
}

nav {
  text-align: center;
}

nav a {
  font-size: 1.2em;
}

nav span+span::before {
  content: "   •   " /* [space][nbsp][space]•[space][nbsp][space] */
}

h3 + blockquote {
  color: $base-color-dark;
  font-size: 1.2em;
}

